css/main.css
html {
	background: black;
}

.main {
	background-color: white;
	margin-top: 110px;
	padding-left: 100px;
	padding-right: 100px;
	min-width: 1200px;
	height: 500px;
	position: relative;
	z-index: 1;
}

.ryu {
	width: 659px;
	height: 494px;
	float: left;
}

.ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
	width: 659px;
	height: 494px;
}


.ryu-ready, .ryu-throwing, .ryu-cool {
	display: none;
}

.ryu, .hadouken, .ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
  background-repeat: no-repeat;
}

.ryu-ready {
	background-image: url("../images/ryu-ready-position.gif");
}

.ryu-still {
	background-image: url("../images/ryu-standing-still.png");
}

.ryu-throwing {
	background-image: url("../images/ryu-throwing-hadouken.png");
}

.ryu-cool {
	background-image: url("../images/ryu-cool.gif");
}


.hadouken {
	background-image: url("../images/hadouken.gif");
	width: 156px;
	height: 90px;
	display: none;
	float: left;
	position: relative;
	z-index: 10;
	top: 170px;
	left: -200px;
}


.hulkryu {
	width: 659px;
	height: 494px;
	float: right;
	-webkit-filter: hue-rotate(90deg);
	transform: scale(-1, 1);
}

.hulkryu-ready, .hulkryu-still, .hulkryu-throwing, .hulkryu-cool {
	width: 659px;
	height: 494px;
}


.hulkryu-ready, .hulkryu-throwing, .hulkryu-cool {
	display: none;
}

.hulkryu, .hulkhadouken, .hulkryu-ready, .hulkryu-still, .hulkryu-throwing, .hulkryu-cool {
  background-repeat: no-repeat;
}

.hulkryu-ready {
	background-image: url("../images/ryu-ready-position.gif");
}

.hulkryu-still {
	background-image: url("../images/ryu-standing-still.png");
}

.hulkryu-throwing {
	background-image: url("../images/ryu-throwing-hadouken.png");
}

.hulkryu-cool {
	background-image: url("../images/ryu-cool.gif");
}


.hulkhadouken {
	background-image: url("../images/hadouken.gif");
	transform: scale(-1, 1);
	-webkit-filter: hue-rotate(270deg);
	width: 156px;
	height: 90px;
	display: none;
	float: right;
	position: relative;
	z-index: 10;
	top: 170px;
	left: 250px;
}


.content {
	position: absolute;
	width: 600px;
	left: 550px;
	padding-top: 55px;
	font-family: Acme;
	font-style: italic;
}

.logo-sf, .logo-jq, .broughttoyou, .instruction {
	display: none;
}

.logo-sf {
	background-image: url("../images/logo-sf.png");
	width: 682px;
	height: 314px;
	background-repeat: no-repeat;
}

.logo-jq {
	background-image: url("../images/logo-jq.png");
	width: 500px;
	height: 172px;
	background-repeat: no-repeat;
	margin-top: 100px;
	margin-left: 40px;
}

.broughttoyou {
	font-size: 70px;
	color: red;
	text-align: center;
	font-weight: 600;
	margin-top: 115px;
}


.instruction {
	text-transform: uppercase;
	font-size: 30px;
}

 #textleft {
 	margin-right: 300px;
 }


 #textright {
 	margin-left: 300px;
 }
*/

